[package]
name = "alloy-ethers-typecast"
version = "0.2.0"
edition = "2021"
description = "Crate for safe typecasting between ethers and alloy types"
license = "CAL-1.0"
homepage = "https://github.com/rainlanguage/alloy-ethers-typecast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.14", features = ["legacy", "ledger"] }
# alloy = { version = "1.0.9", features = ["json-rpc", "rand", "sol-types"] }
alloy = { git = "https://github.com/0xgleb/alloy", features = [
    "json-rpc",
    "sol-types",
] }
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["json"] }
tracing = "0.1.37"
serde_json = { version = "1.0.111", features = ["raw_value"] }
derive_builder = "0.12.0"
async-trait = "0.1.77"
thiserror = "1.0.56"
tracing-subscriber = "0.3.18"
serde = "1.0.195"
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error", rev = "63410e90183de44a804f3d10b82151b55af4c7d8" }
url = "2.5.4"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.11", features = ["js", "js-sys"] }

[patch.crates-io]
alloy = { git = "https://github.com/0xgleb/alloy", features = [
    "json-rpc",
    "sol-types",
] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.70"
httpmock = "0.7.0"

[lints.clippy]
all = "warn"

[package.metadata.docs.rs]
all-features = true
